# freqtrade-lottery-strategy

./: .env.example  .gitignore  README.md  pyproject.toml
.github/agents/: copilot-instructions.md
Input/: sat_feb_28_2026_op_策略在_freqtrade_中的实现.md  v1_LotteryMindsetStrategy.py  v1_agent_iteration_rules.yaml  v1_agent_system_prompt.md  v1_backtest_spec.yaml  v1_config_lottery_strategy.json  v1_pre_live_checklist.md  v1_strategy_params.yaml  v1_weekly_budget_controller.py
agent/: __init__.py  backtest_runner.py  comparator.py  deepseek_client.py  dimension_templates.py  error_recovery.py  evaluator.py  factor_lab.py  factor_templates.py  orchestrator.py  strategy_modifier.py  target_optimizer.py  weekly_settlement.py
agent/prompts/: system_prompt.md
config/: agent_config.yaml  config_backtest.json  iteration_rules.yaml
controllers/: weekly_budget_controller.py
dashboard/: app.py
dashboard/static/: app.js  index.html  style.css
docs/plans/: 2026-02-28-factor-pool-multiwindow.md  2026-03-01-multi-dimension-prompt-redesign.md
results/: iteration_log.json
scripts/: analyze_dimensions.py  analyze_results.py  diagnose_scoring.py  run_agent.py  run_dashboard.sh  test_e2e.py  verify_v2_scoring.py
specs/001-llm-backtest-loop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
strategies/: LotteryMindsetStrategy.py
tests/integration/: test_orchestrator.py
tests/unit/: test_backtest_runner.py  test_comparator.py  test_deepseek_client.py  test_dimension_templates.py  test_error_recovery.py  test_evaluator.py  test_factor_lab.py  (+4 more)
(+4 files in other folders)
